# lucle

./: .gitignore  .gitpod.yml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.build  Dockerfile_old  build.rs  config.toml  key.pem  log.txt  lucle.db
.cargo/: config
.github/workflows/: build-container.yaml  build._yml  build.yml  build_container.yaml  lint_prettier.yaml  release-chart._yaml  release-chart.yaml  release._yml  release.yml  test.yml  test2.yml
.gitpod/: prepare-k3s.sh  prepare-rootfs.sh
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingressroute.yaml  middleware.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
etc/common/: server.toml
etc/imap/: listener.toml
etc/smtp/: listener.toml  resolver.toml
logs/: stalwart.log.2023-11-15  stalwart.log.2023-11-17  stalwart.log.2023-11-18
migrations/2023-08-30-140133_allo/: up.sql
migrations/2023-10-31-061819_allo/: up.sql
migrations/2024-07-12-051207_repositories/: up.sql
proto/: lucle.proto  speedupdate.proto
src/: config.rs  database.rs  database_errors.rs  diesel.rs  errors.rs  http.rs  mail.rs  main.rs  models.rs  multiplex_service.rs  old_main.rs  plugins.rs  print_schema.rs  rpc.rs  schema.rs  surrealdb.rs  user.rs  utils.rs
src/infer_schema_internals/: data_structures.rs  foreign_keys.rs  inference.rs  information_schema.rs  mod.rs  mysql.rs  pg.rs  sqlite.rs  table_data.rs
src/migrations/: mod.rs
web/: .eslintrc.yml  .gitignore  buf.gen.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1715179510093-98943cc90d5ae.mjs
web/proto/: speedupdate.proto
web/src/: App.tsx  adminRoutes.tsx  footer.routes.tsx  main.tsx  routes.tsx  routes.tsx.old
web/src/assets/theme/base/: boxShadows.tsx
web/src/assets/theme/components/: slider.tsx
web/src/assets/theme/functions/: boxShadow.tsx
web/src/components/: BuiltByDevelopers.tsx  DatabaseInfo.tsx  DatabaseURL.tsx  DesignBlocks.tsx  Editor.tsx  GlobalStyles.tsx  NavItem.tsx  Navbar.tsx  Pages.tsx  Sidebar.tsx  Signin.tsx  Signup.tsx
web/src/components/Avatar/: index.tsx
web/src/components/Badge/: index.tsx
web/src/components/Box/: index.tsx
web/src/components/Breadcrumbs/: index.tsx
web/src/components/Button/: ButtonRoot.tsx  index.tsx
web/src/components/Cards/RotatingCard/: RotatingCardBack.tsx  RotatingCardFront.tsx  index.tsx
web/src/components/Configurator/: index.tsx
web/src/components/Footers/DefaultFooter/: index.tsx
web/src/components/Input/: index.tsx
web/src/components/MKBadge/: index.tsx
web/src/components/MKBox/: index.tsx
web/src/components/MKButton/: index.tsx
web/src/components/MKSocialButton/: index.tsx
web/src/components/MKTypography/: index.tsx
web/src/components/Navbars/DashboardNavbar/: index.tsx
web/src/components/Sidenav/: SidenavCollapse.tsx  index.tsx
web/src/components/SocialButton/: index.tsx
web/src/components/Typography/: index.tsx
web/src/components/admin/: Box.tsx  BoxRoot.tsx  Breadcrumbs.tsx  DashboardNavBar.tsx  Input.tsx  NotificationItem.tsx  Typography.tsx
web/src/context/: Auth.tsx  index.tsx
web/src/layout/: Dashboard.tsx
web/src/layouts/: Dashboard.tsx  Install.tsx  Landing.tsx  Presentation.tsx
web/src/pages/Presentation/: index.tsx
web/src/utils/: Api.ts  minio.tsx  rpc.ts  speedupdaterpc.tsx
web/src/views/: AdminIndex.tsx  Editor.tsx  ForgotPassword.tsx  Index.tsx  Install.tsx  Install.tsx.save  Landing.tsx  Login.tsx  Speedupdate.tsx  Speedupdate.tsx.save  Tables.tsx
web/src/views/Install/: createDB.tsx  createUser.tsx  createUsers.tsx
web/src/views/Presentation/: index.tsx
web/src/views/admin/: Index.tsx
(+42 files in other folders)
