[package]
name = "lucle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.6.12"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
ftp = "3.0.1"
diesel = { version = "2.1.1", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
prost = "0.12"
tokio = { version = "1.27", features = ["full"] }
tonic = "0.10.0"
tonic-web = "0.10.0"
tokio-stream = "0.1"
heck = "0.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
serde = { version = "1.0.0", features = ["derive"] }
regex = "1.0.6"
serde_regex = "1.1"
tracing = "0.1"
url = "2.2.2"
mysqlclient-sys = "0.2.5"
syn = { version = "2", features = ["visit"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] } 
pq-sys = "0.4.2"
diffy = "0.3.0"
diesel_table_macro_syntax = "0.1.0"
toml = "0.8.2"

[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] } 
prost-build = "0.12"
