[package]
name = "lucle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.6.20" 
axum-server = { version = "0.5", features = ["tls-rustls"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
ftp = "3.0.1"
diesel = { version = "2.1.1", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
diffy = "0.3.0"
prost = "0.12"
tokio = { version = "1.27", features = ["full"] }
tokio-rustls = "0.24.1"
tonic = { version = "0.10.2", features = ["transport", "tls"] }
tonic-web = "0.10.2"
tokio-stream = "0.1"
heck = "0.4.0"
hyper = "0.14"
hyper-rustls = { version = "0.24.0", features = ["http2"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower = "0.4"
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors", "add-extension", "util"] }
tracing = "0.1"
url = "2.2.2"
toml = "0.8.2"
serde = { version = "1.0.0", features = ["derive"] }
serde_regex = "1.1"
regex = "1.0.6"
mysqlclient-sys = "0.2.5"
syn = { version = "2", features = ["visit"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] } 
pki-types = { package = "rustls-pki-types", version = "0.2" }
pq-sys = "0.4.2"
rcgen = "0.11.3"
rustls-pemfile = "1.0.3"
openssl-probe = "0.1.5"
rustls-acme = { git = "https://github.com/ludea/rustls-acme", branch = "tokio_util", features = ["axum"] }
sudo-rs = "0.2.1"
argon2 = "0.5.2"
#rustls-acme = { version = "0.7.6", features = ["axum", "tokio"] }
 
[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] } 
prost-build = "0.12"
